akregator (1.0-beta4-4) unstable; urgency=low
    
  * fixed menu for kde ( kderemove="y" ).
  * modified descriptions in control.
  * merged some lines in copyright.
  * some vqrious fixes to changelog, control files (on Jean-Michel Kelbert
    advices).
  * add some /usr/share/doc symlinks
  * First upload to debian (ITP closes: #251871).

 -- Pierre Habouzit <pierre.habouzit@m4x.org>  Fri, 09 Jul 2004 18:06:27 +0200

akregator (1.0-beta4-3) unstable; urgency=low
    
  * fixed copyright file.
  * added homepage to control.

 -- Pierre Habouzit <pierre.habouzit@m4x.org>  Thu, 01 Jul 2004 13:49:50 +0200

akregator (1.0-beta4-2) unstable; urgency=low

  * Fixed upstream (new upstream, but same version).
 
 -- Pierre Habouzit <pierre.habouzit@m4x.org>  Thu, 01 Jul 2004 10:13:09 +0200

akregator (1.0-beta4-1) unstable; urgency=low

  * New uptstream.
  * Package now builds in pbuilder.
  * package for the konqueror plugin.

 -- Pierre Habouzit <pierre.habouzit@m4x.org>  Thu, 01 Jul 2004 00:45:11 +0200

akregator (1.0-beta3-3) unstable; urgency=low

  * fix some build dependency on kdepim-dev.

 -- Pierre Habouzit <pierre.habouzit@m4x.org>  Sun, 20 Jun 2004 21:05:09 +0200

akregator (1.0-beta3-2) unstable; urgency=low

  * split package into akregator and akregator-kontact-plugin.

 -- Pierre Habouzit <pierre.habouzit@m4x.org>  Fri, 18 Jun 2004 13:09:53 +0200

akregator (1.0-beta3-1) unstable; urgency=low

  * New uptstream.

 -- Pierre Habouzit <pierre.habouzit@m4x.org>  Fri, 18 Jun 2004 11:47:45 +0200

akregator (1.0-beta2-1) unstable; urgency=low

  * New uptstream.

 -- Pierre Habouzit <pierre.habouzit@m4x.org>  Tue, 25 May 2004 11:00:03 +0200

akregator (1.0-beta1-1) unstable; urgency=low

  * Initial Release.

 -- Pierre Habouzit <pierre.habouzit@m4x.org>  Tue, 25 May 2004 11:00:03 +0200
