@@ -8,9 +8,13 @@ include /usr/share/cdbs/1/class/kde.mk
 
 DEB_INSTALL_DOCS_ALL :=
 DEB_INSTALL_DOCS_akregator := AUTHORS README NEWS
-DEB_INSTALL_CHANGELOGS_ALL := ChangeLog
+DEB_INSTALL_CHANGELOGS_akregator := ChangeLog
 
 DEB_INSTALL_MANPAGES_akregator := debian/akregator.1
+
+install/akregator::
+	mkdir -p debian/akregator/usr/share/lintian/overrides/
+	cp debian/akregator.lintian debian/akregator/usr/share/lintian/overrides/akregator
 
 clean::
 	rm -f debian/compat
